# deepshell-ui

./: .gitignore  CHANGELOG.md  LICENSE  README.md  app.js  docker-compose.yml  index.html  prompt_tests.md  run_deepshell.py  services.css
archive/backend-docs/: README.md  SECURITY.md  setup.py
deepshell-backend/: .dockerignore  .gitignore  .readthedocs.yaml  Dockerfile  LICENSE  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  wrapper.py
deepshell-backend/.github/: FUNDING.yml
deepshell-backend/deepshell/: __init__.py  __main__.py  cache.py  cli.py  config.py  llm.py  persona.py  utils.py
deepshell-backend/deepshell/handlers/: __init__.py  base_handler.py  chat_handler.py  default_handler.py  repl_handler.py
deepshell-backend/docs/: architecture.md  index.md
deepshell-backend/tests/: test_wrapper.py
